Closed Bug 1061060 Opened 11 years ago Closed 11 years ago

Fix more bad implicit constructors in parser

Categories

(Core :: DOM: HTML Parser, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8482078 - Flags: review?(hsivonen)
Attachment #8482078 - Flags: review?(hsivonen) → review+
Backed out in https://hg.mozilla.org/integration/mozilla-inbound/rev/912065e39dc3 for landing on top of the bustage from bug 1060987 for which we've already been closed for 90 minutes on mergeday eve.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: