Bug 1061060 - Fix more bad implicit constructors in parser; r=hsivonen