parser/html/nsHtml5Atom.h
@@ -21,7 +21,7 @@ class nsHtml5Atom MOZ_FINAL : public nsIAtom
     NS_DECL_ISUPPORTS
     NS_DECL_NSIATOM
 
-    nsHtml5Atom(const nsAString& aString);
+    explicit nsHtml5Atom(const nsAString& aString);
     ~nsHtml5Atom();
 };
 
