parser/html/nsHtml5Module.cpp
@@ -89,7 +89,7 @@ class nsHtml5ParserThreadTerminator MOZ_FINAL : public nsIObserver
 {
   public:
     NS_DECL_ISUPPORTS
-    nsHtml5ParserThreadTerminator(nsIThread* aThread)
+    explicit nsHtml5ParserThreadTerminator(nsIThread* aThread)
       : mThread(aThread)
     {}
     NS_IMETHODIMP Observe(nsISupports *, const char *topic, const char16_t *)
